--- a/src/components/Textbox.scss
+++ b/src/components/Textbox.scss
@@ -5,6 +5,7 @@
     margin-right: 30vw;
     border-radius: 5px;
     opacity: 0.6;
+    position: fixed;
     
     p {
         color: white;
@@ -13,4 +14,6 @@
         padding-left: 5vw;
         padding-right: 5vw;
     }
+
+    
 }
